switch green and origin color

--- a/app/src/main/res/layout/activity_head_light.xml
+++ b/app/src/main/res/layout/activity_head_light.xml
@@ -12,6 +12,6 @@
         android:layout_centerInParent="true"
         android:textColor="@color/headlight_origin"
         android:textSize="50sp"
-        android:text="@string/origin_color"/>
+        android:text="@string/green_color"/>
 
 </RelativeLayout>
